# streamlit-app

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  code_structure.json  pyproject.toml  requirements.txt
data/: clients.parquet
data/transactions/: transactions_batch_000.parquet
scripts/: generate_data.py  generate_structure.py
src/: app.py  requirements.txt
